2007-12-21  Miguel de Icaza <miguel@novell.com> 

	

2007-12-20  Ankit Jain  <jankit@novell.com>

	* MakefileGeneratorTool.cs: Use GettextCatalog.GetString for
	user-visible strings.

2007-12-18  Ankit Jain  <jankit@novell.com>

	Fix bug #349419
	* SimpleProjectMakefileHandler.cs: Honor DESTDIR.
	* templates/Makefile.solution.template: Make sure exit_codes work
	(escape shell so $$final_exit means something)
	* templates/make-dist.targets: Remove spurious spaces.
	Based on patches by Wade Berrier.

2007-12-17  Ankit Jain  <jankit@novell.com>

	* Minor fixes like use String.Empty instead of "" etc.

2007-12-14  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs: Re-init Build vars when the owner project gets set.

2007-12-14  Ankit Jain  <jankit@novell.com>

	* SolutionDeployer.cs: Remove dead code.

2007-12-14  Ankit Jain  <jankit@novell.com>

	Fix bug #347649
	* AutotoolsContext.cs (AddRequiredPackages): Allow packages to be
	specified per config.
	(GetRequiredPackages): Per config.
	(GetCommonRequiredPackages): Packages common to all configs.
	* Set.cs (Intersect): New.
	(Count): New.
	(ToString): Override.
	* SimpleProjectMakefileHandler.cs: Keep track of packages per config.
	* SolutionDeployer.cs: Emit package requirements per config in
	configure.ac and the configure script.
	* templates/configure.ac.template: Update.
	* templates/configure.template: Update to check per config packages.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/configure.template: Applied some fixes from the MD config
	  script.
	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs: Updated.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml: Bump add-in versions.

2007-12-11  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs: Use LoggingService.
